# LLMSimulator_HBF

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.yaml  dram_config.yaml  memory_pool_dram_config.yaml
eval/: CMakeLists.txt  test.cpp
src/: CMakeLists.txt
src/common/: assert.h  type.h
src/dram/: CMakeLists.txt  data_object.cpp  data_object.h  dram_interface.cpp  dram_interface.h  dram_request.cpp  dram_request.h  dram_type.h  memory_config.h  memory_object.cpp  memory_object.h  mmap_controller.cpp  mmap_controller.h  pim_request.cpp  pim_request.h  power.h  test.cpp
src/dram/pimkernel/: CMakeLists.txt  GEMV.cpp  Read.cpp  Write.cpp  pim_kernel.cpp  pim_kernel.h
src/dram/ramulator2/: CMakeLists.txt
src/dram/ramulator2/src/dram_controller/impl/plugin/: trace_recorder.cpp
src/hardware/: CMakeLists.txt  activation_impl.cpp  attention_gen_impl.cpp  attention_mixed_impl.cpp  attention_sum_impl.cpp  base.h  cluster.cpp  cluster.h  device.cpp  device.h  executor.cpp  executor.h  hardware_config.h  layer_impl.cpp  layer_impl.h  linear_impl.cpp  node.cpp  node.h  stat.h  test.cpp
src/model/: CMakeLists.txt  llm.cpp  llm.h  model.h  model_config.h  test.cpp  util.h
src/module/: CMakeLists.txt  activation.cpp  activation.h  attention.cpp  attention.h  base.h  communication.cpp  communication.h  compressed_kv_restore.cpp  compressed_kv_restore.h  decode_kv_write.cpp  decode_kv_write.h  decoder.cpp  decoder.h  embedding.cpp  embedding.h  expert.cpp  expert.h  layer.cpp  layer.h  layernorm.cpp  layernorm.h  linear.cpp  linear.h  lm_head.cpp  lm_head.h  module.cpp  module.h  module_graph.cpp  module_graph.h  parallel.cpp  parallel.h  residual.cpp  residual.h  rope.cpp  rope.h  route.cpp  route.h  status.h  tensor.cpp  (+4 more)
src/scheduler/: CMakeLists.txt  scheduler.cpp  scheduler.h  sequence.cpp  sequence.h  test.cpp
